create_graphs/create_fred_p_256860.err
multiprocessing.pool.RemoteTraceback: 
"""
Traceback (most recent call last):
  File "/N/u/zkachwal/Carbonate/miniconda3/lib/python3.7/site-packages/networkx/readwrite/edgelist.py", line 277, in parse_edgelist
    edgedata = dict(literal_eval(' '.join(d)))
  File "/N/u/zkachwal/Carbonate/miniconda3/lib/python3.7/ast.py", line 46, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/N/u/zkachwal/Carbonate/miniconda3/lib/python3.7/ast.py", line 35, in parse
    return compile(source, filename, mode, PyCF_ONLY_AST)
  File "<unknown>", line 1
    throttled out {'label': 'http://wso2.org/apimanager/throttlingmessage'}
                ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/N/u/zkachwal/Carbonate/miniconda3/lib/python3.7/multiprocessing/pool.py", line 121, in worker
    result = (True, func(*args, **kwds))
  File "create_fred.py", line 763, in passiveFredParse
    claim_g=nx.read_edgelist(filename+".edgelist",comments="@")
  File "</N/u/zkachwal/Carbonate/miniconda3/lib/python3.7/site-packages/decorator.py:decorator-gen-584>", line 2, in read_edgelist
  File "/N/u/zkachwal/Carbonate/miniconda3/lib/python3.7/site-packages/networkx/utils/decorators.py", line 240, in _open_file
    result = func_to_be_decorated(*new_args, **kwargs)
  File "/N/u/zkachwal/Carbonate/miniconda3/lib/python3.7/site-packages/networkx/readwrite/edgelist.py", line 369, in read_edgelist
    data=data)
  File "/N/u/zkachwal/Carbonate/miniconda3/lib/python3.7/site-packages/networkx/readwrite/edgelist.py", line 280, in parse_edgelist
    "Failed to convert edge data (%s) to dictionary." % (d))
TypeError: Failed to convert edge data (['throttled', 'out', "{'label':", "'http://wso2.org/apimanager/throttlingmessage'}"]) to dictionary.
"""

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "create_fred.py", line 983, in <module>
    createFred(args.rdfpath,args.graphpath,args.fcgtype,args.init,args.passive,args.cpu,args.compilefred)
  File "create_fred.py", line 951, in createFred
    output=sorted([p.get() for p in results],key=lambda x:x[0])
  File "create_fred.py", line 951, in <listcomp>
    output=sorted([p.get() for p in results],key=lambda x:x[0])
  File "/N/u/zkachwal/Carbonate/miniconda3/lib/python3.7/multiprocessing/pool.py", line 657, in get
    raise self._value
TypeError: Failed to convert edge data (['throttled', 'out', "{'label':", "'http://wso2.org/apimanager/throttlingmessage'}"]) to dictionary.

real	47m46.445s
user	1m8.172s
sys	0m42.144s
